# LogMiddleWare

./: .gitignore  README.md  main.py  pyproject.toml  方案.md
deploy/: docker-compose.elk.yml  docker-compose.tempo.yml  docker-compose.yml  filebeat.yml  offline-package-elk.sh  offline-package-tempo.sh  offline-package.sh  tempo.yaml
deploy/grafana/: datasources.yaml
docs/: 方案.md
examples/: service_a.py  service_a_layered.py  service_b.py
log_middleware/: __init__.py  config.py  exporters.py  http_client.py  logging_integration.py  middleware.py  propagation.py  provider.py  subprocess_integration.py
tests/: context_test.py  duplicate_test.py  final_test.py  quick_test.py  test_sanic_loggers_integration.py  test_subprocess_trace.py  test_trace_scenarios.py
